tests/compile-fail/stacked_borrows/shared_rw_borrows_are_weak2.stderr
error: Undefined Behavior: attempting a read access using <1994> at alloc953[0x8], but that tag does not exist in the borrow stack for this location
  --> $DIR/shared_rw_borrows_are_weak2.rs:13:16
   |
LL |     let _val = *y; //~ ERROR borrow stack
   |                ^^
   |                |
   |                attempting a read access using <1994> at alloc953[0x8], but that tag does not exist in the borrow stack for this location
   |                this error occurs as part of an access at alloc953[0x8..0xc]
   |
   = help: this indicates a potential bug in the program: it performed an invalid operation, but the rules it violated are still experimental
   = help: see https://github.com/rust-lang/unsafe-code-guidelines/blob/master/wip/stacked-borrows.md for further information
           
   = note: inside `main` at $DIR/shared_rw_borrows_are_weak2.rs:13:16

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

